K8S/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: rohannigam226/debian:latest
        ports:
        - containerPort: 8080 # Adjust based on your app's needs
