K8S/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service  # Replace with your service's name
spec:
  selector:
    app: wisecow  # Ensure this matches the app label in your deployment
  ports:
    - protocol: TCP
      port: 443  # Use HTTPS port
      targetPort: 4499 # Change to your app's port
  type: ClusterIP
